# fastapi-template

./: .env.example  Makefile  README.md  frontend.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schemas.py  users.py
app/modules/posts/controllers/: createPostController.py  deletePostsController.py  getPostsController.py
app/modules/posts/routes/: postsRoutes.py
